修复发布评论
