# api/comment.go
@@ -1,13 +1,13 @@
 package api
 
 import (
+	db "TestGin/config"
 	res "TestGin/middleware"
 	"TestGin/model"
 	"TestGin/util"
+	"encoding/json"
 	"errors"
 	"fmt"
-	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	"log"
 	"mime/multipart"
 	"net/http"
@@ -15,6 +15,9 @@ import (
 	"strconv"
 	"strings"
 	"time"
+
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 )
 
 type UploadItems struct {
@@ -41,7 +44,7 @@ func AddComment(c *gin.Context) {
 	postID := c.PostForm("postId")
 	userID := c.PostForm("userId")
 	parentID := c.PostForm("parentId")
-	//typeFile := c.PostForm("type")/
+	typeFile := c.PostForm("type")
 
 	postIDInt, _ := strconv.Atoi(postID)
 	userIDInt, _ := strconv.Atoi(userID)
@@ -49,14 +52,6 @@ func AddComment(c *gin.Context) {
 	parentIDTo := uint(parentIDInt)
 	parentIDPtr := &parentIDTo // parentIDPtr 类型为 *uint
 
-	form := model.CommentRequest{
-		Content:  content,
-		PostID:   uint(postIDInt),
-		UserID:   uint(userIDInt),
-		ParentID: parentIDPtr,
-		Type:     1,
-	}
-	log.Printf("form:%+v\n", form)
 	formFile, err := c.MultipartForm()
 	files := formFile.File["files"]
 	uploadPath := "./static"
@@ -91,9 +86,6 @@ func AddComment(c *gin.Context) {
 			imageCount++
 		} else if strings.HasPrefix(fileType.MimeType, "video/") {
 			videoCount++
-		} else {
-			res.Error(c, http.StatusBadRequest, fmt.Errorf("不支持的文件类型: %s", fileType.MimeType))
-			return
 		}
 		log.Printf("imageCount:%v,videoCount:%v\n", imageCount, videoCount)
 		filePaths = append(filePaths, UploadItems{
@@ -125,5 +117,91 @@ func AddComment(c *gin.Context) {
 		log.Printf("上传成功: %s", file.FileName)
 		fileList = append(fileList, file.FileName)
 	}
-	res.Success(c, fileList)
+
+	form := model.Comment{
+		Content:  content,
+		PostID:   uint(postIDInt),
+		UserID:   uint(userIDInt),
+		ParentID: parentIDPtr,
+	}
+	log.Printf("form:%+v\n", form)
+	uploadType, _ := model.StringToResourceType(typeFile)
+	// 将 fileList 序列化为 JSON 字符串
+	urlJSON, err := json.Marshal(fileList)
+	if err != nil {
+		log.Printf("JSON 序列化失败: %v", err)
+		res.Error(c, 500, err)
+		return
+	}
+
+	tx := db.DB.Begin()
+	if err1 := db.DB.Create(&form).Error; err1 != nil {
+		tx.Rollback()
+		res.Error(c, 500, err)
+		return
+	}
+	resource := model.CommentResource{
+		CommentID: form.ID,
+		Type:      uploadType,
+		URL:       string(urlJSON),
+	}
+	if err2 := db.DB.Debug().Create(&resource).Error; err2 != nil {
+		tx.Rollback()
+		res.Error(c, 500, err)
+		return
+	}
+
+	res.Success(c, "")
+}
+
+// ListComments 获取评论列表
+// @Summary 获取评论列表
+// @Description 获取评论列表
+// @Tags 评论
+// @Param postId query int true "帖子ID"
+// @Success 200 {object} res.Response "{"code":200,"data":{},"msg":"操作成功"}"
+// @Router /api/comment/list [get]
+func ListComments(c *gin.Context) {
+	postID := c.Query("postId")
+	postIDInt, _ := strconv.Atoi(postID)
+
+	var results []model.CommentResponse
+
+	err := db.DB.
+		Table("comments AS c").
+		Select(`
+    c.id, 
+    c.content, 
+    c.post_id, 
+    c.user_id, 
+    c.parent_id, 
+    r.type, 
+    r.url, 
+    c.created_at
+  `).
+		Joins("LEFT JOIN comment_resources AS r ON r.comment_id = c.id").
+		Where("c.post_id = ?", postIDInt).
+		Scan(&results).
+		Error
+	log.Printf("comments:%+v\n", results)
+
+	//把url转为字符串数组
+	for _, result := range results {
+		bytesData, _ := json.Marshal(result.URL)
+		fmt.Printf("恢复后的 fileList: %s\n", result.URL)
+		var fileList []string
+		if err := json.Unmarshal([]byte(bytesData), &fileList); err != nil {
+			log.Fatalf("Unmarshal 失败: %v", err)
+		}
+		result.URL = fileList
+		//result.CreatedAt = util.FormatTime(result.CreatedAt)
+
+	}
+
+	if err != nil {
+		res.Error(c, 500, err)
+		return
+	}
+
+	res.Success(c, results)
 }
